--- a/mina.html
+++ b/mina.html
@@ -31,7 +31,7 @@
 
       <div class="header-image">
         <img class="huvudbild" src="assets/icons/Logo.svg" />
-        <h1>Mina sidor</h1>
+        <h1 class="rubrik">Mina sidor</h1>
       </div>
     </header>
 
@@ -45,11 +45,11 @@
 
         <div class="form-control form-control-datum col-50">
           <label for="datum-input">Datum:</label>
-          <input id="datum-input" name="datum" type="date" />
+          <input id="datum-input" name="datum" type="" />
         </div>
       </div>
 
-      <button type="submit">LÄGG TILL</button>
+      <button class="knapp" type="submit">LÄGG TILL</button>
     </form>
 
     <main class="main">
