--- a/mina.html
+++ b/mina.html
@@ -36,7 +36,7 @@
     </header>
 
     <form class="plantering">
-      <h2>Lägg till ny plantering:</h2>
+      <h2 class="form-rubrik">Lägg till ny plantering:</h2>
       <div class="form-group">
         <div class="form-control form-control-planta col-50">
           <label for="planta-input">Planta:</label>
