--- a/mina.html
+++ b/mina.html
@@ -30,13 +30,15 @@
       </nav>
 
       <div class="header-image">
-        <img class="huvudbild" src="assets/icons/Logo.svg" />
+        <img class="huvudbild" src="assets/icons/Logo.svg" alt="logga"/>
+        
         <h1 class="rubrik">Mina sidor</h1>
       </div>
     </header>
 
     <form class="plantering">
       <h2 class="form-rubrik">Lägg till ny plantering:</h2>
+
       <div class="form-group">
         <div class="form-control form-control-planta col-50">
           <label for="planta-input">Planta:</label>
