Uppdaterat mina.html så hem-knappen funkar

--- a/mina.html
+++ b/mina.html
@@ -14,7 +14,8 @@
     <header>
       <nav>
         <ul class="web-lista">
-          <li><a href="#">PLANER</a></li>
+          <li><a href="index.html">HEM</a></li>
+          <li><a href=>PLANER</a></li>
           <li><a href="#">HISTORIK</a></li>
           <li><a href="#">TIPS</a></li>
           <li><a href="#">LOGGA UT</a></li>
