Tagit bort headern från main

--- a/mina.html
+++ b/mina.html
@@ -10,32 +10,33 @@
 </head>
 
 <body>
-  <main class="container">
-    <header>
-      <nav>
-        <ul class="web-lista">
-          <li><a href="index.html">HEM</a></li>
-          <li><a href=>PLANER</a></li>
-          <li><a href="#">HISTORIK</a></li>
-          <li><a href="#">TIPS</a></li>
-          <li><a href="#">LOGGA UT</a></li>
-        </ul>
+  <header>
+    <nav>
+      <ul class="web-lista">
+        <li><a href="index.html">HEM</a></li>
+        <li><a href="#">PLANER</a></li>
+        <li><a href="#">HISTORIK</a></li>
+        <li><a href="#">TIPS</a></li>
+        <li><a href="#">LOGGA UT</a></li>
+      </ul>
 
-        <div class="telefon-lista">
-          <label class="hamburgare-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-          </label>
-        </div>
-      </nav>
-
-      <div class="header-image">
-        <img class="huvudbild" src="assets/icons/Logo.svg" alt="logga"/>
-        
-        <h1 class="rubrik">Mina sidor</h1>
+      <div class="telefon-lista">
+        <label class="hamburgare-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
       </div>
-    </header>
+    </nav>
+
+    <div class="header-image">
+      <img class="huvudbild" src="assets/icons/Logo.svg" alt="logga"/>
+      
+      <h1 class="rubrik">Mina sidor</h1>
+    </div>
+  </header>
+
+  <main class="container">
 
     <form class="plantering">
       <h2 class="form-rubrik">Lägg till ny plantering:</h2>
