changed the icon in the hero section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <span
             class="icon-mask"
             role="img"
-            aria-label="Ikon: fröpaket"
-            style="--icon-url: url('assets/icons/Vectorseedpackage.svg')"
+            aria-label="Ikon: spadde"
+            style="--icon-url: url('assets/icons/dig.svg')"
           ></span>
         </section>
       </section>
