added missing structure to the contact info

--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
                   alt="Telefon"
                 />
                 <span>0701-234567</span>
-              </p>
-              <p class="contact__row">
+
                 <img
                   class="contact__icon"
                   src="assets/icons/envelope.svg"
                   alt="E-post"
+                  style="margin-left: 1rem"
                 />
                 <span>mail@mail.se</span>
               </p>
