Text-ändring bara

--- a/mina.html
+++ b/mina.html
@@ -198,7 +198,7 @@
             <button class="calendar-section__button">Öppna kalender</button>
           </section>
           <figure class="calendar-section__image">
-            <img src="assets/images/tjejmedhatt.avif" alt="Person med hatt i trädgård" class="calendar-section__img">
+            <img src="assets/images/tjejmedhatt.avif" alt="Tjej med hatt i trädgård" class="calendar-section__img">
           </figure>
         </section>
       </section>
