removed extra section in header

--- a/index.html
+++ b/index.html
@@ -21,26 +21,30 @@
               src="assets/icons/Logo.svg"
               alt="Planned Planthood-logotyp i form av hjärta"
             />
-            <span class="vh">Hjärtsymbol placerad mitt på bilden</span>
           </figcaption>
         </figure>
 
-        <section class="masthead__tile masthead__tile--brown">
+        <figure
+          class="masthead__tile masthead__tile--brown"
+          role="img"
+          aria-label="Ikon av groddplanta"
+        >
           <span
             class="icon-mask"
-            role="img"
-            aria-label="Ikon: groddplanta"
             style="--icon-url: url('assets/icons/seedling.svg')"
           ></span>
-        </section>
-        <section class="masthead__tile masthead__tile--teal">
+        </figure>
+
+        <figure
+          class="masthead__tile masthead__tile--teal"
+          role="img"
+          aria-label="Ikon av planteringsspade"
+        >
           <span
             class="icon-mask"
-            role="img"
-            aria-label="Ikon: spadde"
             style="--icon-url: url('assets/icons/dig.svg')"
           ></span>
-        </section>
+        </figure>
       </section>
 
       <!-- Fliknavigering (Flex) -->
