added rätt ikon för history delen

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
           <span
             class="icon-mask icon-mask--lg"
             role="img"
-            aria-label="Ikon: groddplanta, symboliserar historik"
-            style="--icon-url: url('assets/icons/seedling.svg')"
+            aria-label="Ikon: kruka med planta"
+            style="--icon-url: url('assets/icons/plant.svg')"
           ></span>
         </figure>
       </section>
