Upddaterad och fixat footer

--- a/mina.html
+++ b/mina.html
@@ -210,35 +210,35 @@
           <button class="calendar-section__button">Öppna kalender</button>
         </section>
         <figure class="calendar-section__image">
-          <img src="assets/images/tjejmedhatt.avif" alt="Person med hatt i trädgård" class="calendar-section__img">
+          <img src="assets/images/tjejmedhatt.avif" alt="Tjej med hatt i trädgård" class="calendar-section__img">
         </figure>
       </section>
     </section>
   </main>
-
   <footer class="footer" id="kontakt">
-    <section class="footer__content">
-      <section class="footer__section">
-        <h4 class="footer__title">Kontakt</h4>
-        <ul class="footer__contact">
-          <li class="footer__contact-item">
-            <img src="assets/icons/telephone.svg" alt="Telefon ikon" class="footer__icon">
-            <span class="footer__text">+46 123 456 789</span>
-          </li>
-          <li class="footer__contact-item">
-            <img src="assets/icons/envelope.svg" alt="E-post ikon" class="footer__icon">
-            <span class="footer__text">info@plannedplanthood.se</span>
-          </li>
-        </ul>
-      </section>
-      <section class="footer__section">
-        <h4 class="footer__title">Följ oss</h4>
-        <p class="footer__text">Få tips och inspiration för din trädgård</p>
-      </section>
+    <section class="footer__gallery">
+      <div class="footer__images">
+        <figure class="footer__image">
+          <img src="assets/images/tomat.avif" alt="Röda tomater på planta" class="footer__img">
+        </figure>
+        <figure class="footer__image">
+          <img src="assets/images/gurka.avif" alt="Närbild på en gurkplanta" class="footer__img">
+        </figure>
+        <figure class="footer__image">
+          <img src="assets/images/ärta.avif" alt="Sockerärtor som klättrar på stöd" class="footer__img">
+        </figure>
+        <figure class="footer__image">
+          <img src="assets/images/tjejmedhatt.avif" alt="Tjej med hatt" class="footer__img">
+        </figure>
+      </div>
     </section>
-    <section class="footer__bottom">
-      <p class="footer__copyright">&copy; 2025 Planned Planthood. Alla rättigheter förbehållna.</p>
-    </section>
+
+
+    <div class="backtop">
+      <a href="index.html" class="backtop__link" aria-label="Gå tillbaka till startsidan">
+        Till toppen av sidan
+      </a>
+    </div>
   </footer>
   </main>
 </body>
